skin/adv_like/adv_like.css
@charset "UTF-8";
/**
 * Customized PukiWiki Advance skin for PukiWiki by root-SBH.
 * Original(PukiWiki Plus!) version written by miko and upk.
 * Adv version by Logue.
 *
 * $Id: default.css,v 1.0.0 2023/03/13 20:00:00 root-SBH Exp $
 */

/** Generic Tags *********************************************************************************/
::selection,
::-moz-selection {
	text-shadow: none;
}

a:not(.btn):not([role="presentation"]) {
	text-decoration: none;
	-ms-transition: .2s ease-in-out;
	-moz-transition: .2s ease-in-out;
	-webkit-transition: .2s ease-in-out;
	transition: .2s ease-in-out;
}

a:not(.btn):not([role="presentation"]):hover {
	text-decoration: underline;
}

blockquote {
	font-size: 100%;
	line-height: 130%;
	margin-left: 32px;
	/* border-width: 1px;
	border-style: solid;
	padding: .5em;
	box-shadow: 0 1px 6px; */
}

* {
	margin-block-end: 0;
}

dt {
	font-weight: bold;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	padding: .1em 0 .1em .3em;
	border-left: .4em solid;
	border-bottom: 1px solid;
	margin: 0;
	font-weight: 500;
}

h1 + *,
h2 + *,
h3 + *,
h4 + *,
h5 + *,
h6 + *,
h1 + div:first-child,
h2 + div:first-child,
h3 + div:first-child,
h4 + div:first-child,
h5 + div:first-child,
h6 + div:first-child {
	margin-block-start: 0.5em;
}

pre {
	border: 1px solid;
	border-radius: 4px;
	padding: .5em 1em;
	white-space: pre-wrap;
}

q {
	border: 1px dotted;
}

textarea {
	box-sizing: border-box;
	scrollbar-gutter: stable;
	resize: vertical;
}

textarea,
input,
select {
	border: 1px solid;
	border-radius: 5px;
	padding: 0 3px;
}

input[type="submit"] {
	height: 1.6em;
	border-radius: 5px;
	padding: 0 5px;
}

input[type="text"],
input[type="password"],
input[type="search"] {
	height: 1.6em;
	border-radius: 5px;
	padding: 0 4px;
}

::-webkit-scrollbar {
	width: 10px;
	height: 10px;
	border-radius: 5px;
}

::-webkit-scrollbar-track {
	border-radius: 10px;
}


::-webkit-scrollbar-thumb {
	border-radius: 10px;
}

img {
	border: none;
	vertical-align: middle;
}

ul {
	margin-top: .5em;
	margin-bottom: .5em;
	line-height: 130%;
}

em {
	font-style: italic;
}

strong {
	font-weight: bold;
}

.style_table {
	padding: 0;
	border: 0;
	margin: auto;
	text-align: left;
}

.style_th {
	padding: 5px;
	margin: 1px;
	text-align: center;
}

.style_td {
	padding: 5px;
	margin: 1px;
}

ul.list1 {
	list-style-type: disc;
}

ul.list2 {
	list-style-type: circle;
}

ul.list3 {
	list-style-type: square;
}

ol.list1 {
	list-style-type: decimal;
}

ol.list2 {
	list-style-type: lower-roman;
}

ol.list3 {
	list-style-type: lower-alpha;
}

.list-indent1 {
	padding-left: 16px;
	margin-left: 16px;
}

/* list-indent2,3,4 are used for leaping list level indentation */
.list-indent2 {
	padding-left: 32px;
	margin-left: 32px;
}

.list-indent3 {
	padding-left: 48px;
	margin-left: 48px;
}

.list-indent4 {
	padding-left: 64px;
	margin-left: 64px;
}

div.ie5 {
	text-align: center;
}

.comment_date {
	font-size: x-small;
}

.small {
	font-size: 80%;
}

span.noexists {
	text-shadow: none !important;
}

.super_index {
	font-weight: bold;
	font-size: 60%;
	vertical-align: super;
}

a.note_super {
	font-weight: bold;
	font-size: 60%;
	vertical-align: super;
}

div.jumpmenu {
	font-size: 60%;
	text-align: right;
	user-select: none;
}

h1 + div.jumpmenu,
h2 + div.jumpmenu,
h3 + div.jumpmenu,
h4 + div.jumpmenu,
h5 + div.jumpmenu,
h6 + div.jumpmenu {
	display: none;
}

hr.full_hr {
	border-style: ridge;
	border-width: 1px 0;
}

hr.note_hr {
	/* width:90%; */
	border-style: ridge;
	border-width: 1px 0;
	text-align: center;
	margin: 1em auto 0em auto;
}

span.size1 {
	font-size: xx-small;
	line-height: 130%;
	text-indent: 0;
	display: inline;
}

span.size2 {
	font-size: x-small;
	line-height: 130%;
	text-indent: 0;
	display: inline;
}

span.size3 {
	font-size: small;
	line-height: 130%;
	text-indent: 0;
	display: inline;
}

span.size4 {
	font-size: medium;
	line-height: 130%;
	text-indent: 0;
	display: inline;
}

span.size5 {
	font-size: large;
	line-height: 130%;
	text-indent: 0;
	display: inline;
}

span.size6 {
	font-size: x-large;
	line-height: 130%;
	text-indent: 0;
	display: inline;
}

span.size7 {
	font-size: xx-large;
	line-height: 130%;
	text-indent: 0;
	display: inline;
}

/** color switch  ***********************************************************************************/

.color_switch {
	position: absolute;
	top: 16px;
	right: 16px;
	display: flex;
	align-items: center;
}

.switch {
	position: relative;
}

input[type='checkbox']#color_mode_switch {
	display: none;
}

.slider {
	width: 36px;
	border-radius: 10px;
	height: 20px;
	background-color: #8b8b8b;
	transition: transform 250ms ease-in-out;
}

input[type='checkbox']#color_mode_switch:checked~div .slider {
	background: #c0c0c0;
}

.circle {
	position: absolute;
	top: 2px;
	left: 2px;
	width: 16px;
	height: 16px;
	border-radius: 8px;
	background-color: white;
	transition: transform 250ms ease-in-out;
}

input[type='checkbox']#color_mode_switch:checked~div .circle {
	background-color: black;
	transform: translateX(100%);
}

.color_switch_title {
	font-size: 14px;
	margin-left: 4px;
}

/** Page Layout ***********************************************************************************/
#container {
	width: 100%;
	margin: 0 auto;
}

div#navigator {
	clear: both;
	padding: 4px 0 0 0;
	margin: 0;
}

div#contents {
	display: flex;
	flex-flow: row nowrap;
	/* word-break:break-all; */
	overflow-wrap: break-word;
	word-wrap: break-word;
}

div#menubar-outer {
	display: flex;
	order: 1;
	width: 20%;
	/* padding-right: 4px; */
}

#menubar ul li {
	list-style: none;
}

div#rightbar-outer {
	order: 3;
	width: 20%;
	/* padding-left: 4px; */
}

#menubar h1,
#menubar h2,
#menubar h3,
#menubar h4,
#menubar h5,
#menubar h6,
#rightbar h1,
#rightbar h2,
#rightbar h3,
#rightbar h4,
#rightbar h5,
#rightbar h6 {
	border: 1px solid;
}
/* ... */

